<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_ID"
        android:icon="@drawable/ic_baseline_id_24"
        android:title="@string/nav_ID"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings"/>

    <item
        android:id="@+id/nav_pay"
        android:icon="@drawable/ic_baseline_payment_24"
        android:title="@string/nav_pay_mthd"/>

    <item
        android:id="@+id/nav_mess"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/nav_message"/>

    <item
        android:id="@+id/nav_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/nav_call"/>

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/nav_help"/>

    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/nav_logOut"/>

</menu>