<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/birth_cert_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Birth_cert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="735dp">

            <TextView
                android:id="@+id/b_Cert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Birth_cert"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.045" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="133dp"
                android:layout_height="32dp"
                android:background="@color/purple_700"
                android:paddingLeft="20dp"
                android:text="Applicant"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b_Cert"
                app:layout_constraintVertical_bias="0.046" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Surname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.017" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Fname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/b_Cert"
                app:layout_constraintVertical_bias="0.116" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/OthrNames"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Dte_birth"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintVertical_bias="0.127" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="352dp"
                android:hint="@string/plc_birth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText3"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                app:layout_constraintVertical_bias="0.446" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:background="@color/purple_700"
                android:paddingLeft="20dp"
                android:text="@string/Father"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.034" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.027" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Occp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText6"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintVertical_bias="0.147" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Natly"
                android:paddingLeft="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText6"
                app:layout_constraintVertical_bias="0.04" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="204dp"
                android:hint="@string/Reg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText7"
                app:layout_constraintTop_toBottomOf="@+id/editText8"
                app:layout_constraintVertical_bias="0.156" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                android:paddingLeft="20dp"
                android:text="@string/Mother"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText7"
                app:layout_constraintVertical_bias="0.054" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Occp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText10"
                app:layout_constraintTop_toBottomOf="@+id/editText9"
                app:layout_constraintVertical_bias="0.203" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Natly"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText10"
                app:layout_constraintVertical_bias="0.037" />

            <EditText
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/Reg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/editText12"
                app:layout_constraintTop_toBottomOf="@+id/editText11"
                app:layout_constraintVertical_bias="0.037" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                android:paddingLeft="10dp"
                android:text="@string/Info"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText12"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:text="@string/Info_name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="220dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add_info"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.262"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText13"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.897"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</ScrollView>